--- a/Clase5/package.json
+++ b/Clase5/package.json
@@ -2,6 +2,7 @@
   "name": "clase5",
   "version": "1.0.0",
   "main": "ProductManager.js",
+  "type": "module",
   "scripts": {
       "start": "node --watch ProductManager.js"
   },
