--- a/Clase10/package.json
+++ b/Clase10/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
 "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"start": "node --watch src/app.js"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
