--- a/Clase11 ACTIVIDAD1/package.json
+++ b/Clase11 ACTIVIDAD1/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "start": "node  ./src/app.js"  },
+  "start": "node --watch ./src/app.js"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
