--- a/Clase12ChatconMongo/package.json
+++ b/Clase12ChatconMongo/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node --watch ./src/app.js"
+    "start": "node  ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "mongodb": "^6.8.0",
