--- a/Clase12ChatconMongo/dockerfile
+++ b/Clase12ChatconMongo/dockerfile
@@ -2,8 +2,7 @@
 FROM node:21
 
 # Establece el directorio de trabajo dentro del contenedor
-WORKDIR /usr/src/app
-
+WORKDIR /src
 # Copia el package.json y package-lock.json para instalar las dependencias
 COPY package*.json ./
 
