--- a/Clase10/src/package.json
+++ b/Clase10/src/package.json
@@ -2,9 +2,10 @@
   "name": "clase10",
   "version": "1.0.0",
   "main": "index.js",
-"type":"module",
+  "type": "module",
   "scripts": {
-"start": "node --watch src/app.js"  },
+    "start": "node --watch app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
