--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -4,14 +4,14 @@
     "express-handlebars": "^7.1.3",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.4",
+    "mongose": "^0.0.2-security",
     "socket.io": "^4.7.5"
   },
   "name": "segunda-entrega",
   "version": "1.0.0",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "start": "node --watch app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
