--- a/Clase12ChatconMongo/docker-compose.yml
+++ b/Clase12ChatconMongo/docker-compose.yml
@@ -1,21 +1,33 @@
-version: '3'
-services:
-  node-app:
-    build: .  # Especifica la ruta al directorio donde se encuentra el Dockerfile de tu aplicación Node.js
-    ports:
-      - '8002:8002'      # Mapea el puerto 3000 de tu máquina local al puerto 3000 del contenedor
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/coderhouse  # URI de conexión a MongoDB
-    depends_on:
-      - mongo            # Asegura que MongoDB se inicie antes que la aplicación Node.js
+version: '3.9'
 
-  mongo:
-    image: mongo  # Utiliza la imagen oficial de MongoDB desde Docker Hub
-    ports:
-      - '27017:27017'    # Mapea el puerto 27017 de tu máquina local al puerto 27017 del contenedor
+services:
+  mongodb:
+    container_name: mongodb_container
+    image: mongo:latest
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
     volumes:
-      - mongo-data:/data/db  # Persistencia de datos de MongoDB en un volumen
+      - mongodb_data:/data/db
+    ports:
+      - "27017:27017"
+
+  nodejs:
+    container_name: nodejs_container
+    build: .
+    restart: always
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongodb
+    environment:
+      MONGO_URL: mongodb://mongo:27017/coderhouse
 
 volumes:
-  mongo-data:
-    driver: local        
+  mongodb_data:
+    driver: local
+      
+
+
+      
