--- a/Clase12ChatconMongo/dockerfile
+++ b/Clase12ChatconMongo/dockerfile
@@ -2,7 +2,7 @@
 FROM node:19
 
 # Establece el directorio de trabajo dentro del contenedor
-WORKDIR /src
+WORKDIR /
 # Copia el package.json y package-lock.json para instalar las dependencias
 COPY package*.json ./
 
