--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -7,6 +7,7 @@
   "name": "segunda-entrega",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node --watch src/app.js"
   },
